<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="applicationName">Emergency GPX</string>
    <string name="applicationLabel">Emergency GPX</string>
    <string name="latitude">Latitude*:</string>
    <string name="longitude">Longitude*:</string>
    <string name="hintGeoData">ddd:mm:ss.ssss</string>
    <string name="getLocationFromGps">Get from GPS</string>
    <string name="getLocationFromGpsCancel">Cancel</string>
    <string name="star">* - allowed formats:\n1. [+-]ddd.dddd\n2. [+-]ddd:mm.mmm\n3. [+-]ddd:mm:ss.ss\n4. WGS84 (NSEW ddd° mm.mmm\')</string>
    <string name="targetFileName">Save as:</string>
    <string name="hintTargetFileName">GPX filename (optional)</string>
    <string name="targetAutoImportToLocus">Import into Locus</string>
    <string name="downloadImages_always">Download images (yes)</string>
    <string name="downloadImages_wifi">Download images (WiFi only)</string>
    <string name="downloadImages_never">Download images (no)</string>
    <string name="start">Start</string>
    <string name="maxNumOfCaches">Max number\nof geocaches:</string>
    <string name="maxCacheDistance">Max distance [km]:</string>
    <string name="hintMaxNumOfCaches">i.e. 200 geocaches</string>
    <string name="hintMaxCacheDistance">i.e. 10 km</string>
    <string name="maxNumOfCachesDefault">50</string>
    <string name="cacheTypes">Only these cache types:</string>
    <string name="chooseCacheTypes">Choose cache types</string>
    <string name="locusCommunicationError">Locus communication error</string>
    <string name="locusCommunicationError2">Emergency GPX: Locus communication error</string>
    <string name="gpsDisabled">GPS is disabled, acquireing location from network</string>
    <string name="noLocationInfo">Could not acquire location</string>
    <string name="distanceUnit.m">m</string>
    <string name="distanceUnit.km">km</string>
    <string name="validationErrors">There are errors in your form, please correct them</string>
    <string name="validationWarnings">There were some problems with your config. Please verify form data, and tap \'Start\' again</string>
    <string name="validationIncompleteLocation">Location cannot be empty</string>
    <string name="validationInvalidLocation">Invalid location format</string>
    <string name="validationMissingLocation">Location cannot be empty</string>
    <string name="validationInvalidMaxCachesLimit">Limit must be in range 1..500</string>
    <string name="validationMinCacheDistanceWarning">Minimum value for "Max distance" is 20 meters</string>
    <string name="validationInvalidCacheDistance">Invalid distance</string>
    <string name="validationInvalidNoCacheDistanceNeitherLimit">You must enter either the distance, or the limit</string>
    <string name="validationMissingFileName">Missing filename</string>
    <string name="validationMissingFileNameOrLocusImport">You must either enter the filename, or check the \'Import to Locus\' option</string>
    <string name="validationTargetFileIsDir">Target location already exists, and it is a folder!</string>
    <string name="validationTargetFileIsReadOnly">Target file already exists, and cannot be overwritten</string>
    <string name="validationTargetFileExistsWarning">Target file already exists. If you want to overwrite it, tap \'Start\' again</string>
    <string name="validationCantCreateTargetDir">Could not create the target folder</string>
    <string name="validationTargetDirIsReadOnly">Could not write into the target folder</string>
    <string name="validationTargetDirIsFile">Target location is a file (expected a folder)</string>
    <string name="validationInvalidImagesDownloadStrategy">Invalid images download strategy</string>
    <string name="validationCantCreateTargetImagesDir">Could not create the folder for the images</string>
    <string name="validationTargetImagesDirIsReadOnly">Could not write into the folder for the images</string>
    <string name="validationTargetImagesDirIsFile">Images target location is a file (expected a folder)</string>
    <string name="errorPlaceholderText">ERROR_TEXT_GOES_HERE</string>
    <string name="gpxDownloaderServiceName">GPX downloader service</string>
    <string name="gpxDownloaderServiceDescription">Downloads and processes GPX files</string>
    <string name="filesDownloaderServiceName">File downloader service</string>
    <string name="filesDownloaderServiceDescription">Downloads images and other static resources</string>
    <string name="titleActivityDownloadList">Downloads list</string>
    <string name="menuGoToDownloadsList">File downloads</string>
    <string name="btnDownloadItemStop">Pause</string>
    <string name="btnDownloadItemPlay">Reasume</string>
    <string name="btnDownloadItemRestart">Restart</string>
    <string name="btnDownloadItemCancel">Stop</string>
    <string name="btnDownloadItemRemove">Remove</string>
    <string name="btnDownloadItemStopDescription">Pauses task</string>
    <string name="btnDownloadItemPlayDescription">Resumes task</string>
    <string name="btnDownloadItemCancelDescription">Stops task</string>
    <plurals name="cache">
        <item quantity="one">%d geocache</item>
        <item quantity="other">%d geocaches</item>
    </plurals>
    <plurals name="error">
        <item quantity="one">%d error</item>
        <item quantity="other">%d errors</item>
    </plurals>
    <plurals name="skipped">
        <item quantity="other">%d skipped</item>
    </plurals>
    <plurals name="running">
        <item quantity="other">%d in progress</item>
    </plurals>
    <plurals name="taskRunning">
        <item quantity="one">%d task running</item>
        <item quantity="other">%d tasks running</item>
    </plurals>
    <plurals name="downloader_finished">
        <item quantity="other">%d finished</item>
    </plurals>
    <plurals name="taskFinished">
        <item quantity="one">%d task finished</item>
        <item quantity="other">%d tasks finished</item>
    </plurals>
    <plurals name="filesCountOverTotal">
        <item quantity="one">%1$d file out of %2$d</item>
        <item quantity="other">%1$d/%2$d files</item>
    </plurals>
    <plurals name="filesCount">
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>
    <string name="infoWaiting">Waiting&#8230;</string>
    <string name="infoWorkInProgress">Please wait, working&#8230;</string>
    <string name="okapiErrorInvalidToken">We got "access denied" from oc.pl. You need to re-authorize.</string>
    <string name="okapiErrorInvalidTimestamp">Check your system time, in needs to be valid!</string>
    <string name="titleActivityInfo">About</string>
    <string name="infoAboutTitle">Here should be some application description ;)</string>
    <string name="infoAbout">The major goal for this application is integrating Opencaching with applications such as Locus Maps and Columbus. It lets you download geocaches from opencaching.pl website. It also allows your prefetch all the images attached to the downloaded geocaches (so you can display them when you're offline).</string>
    <string name="infoHelpTitle">Help!</string>
    <string name="infoHelp" formatted="false">(User\'s manual=%0)\t(Forum=%1)\t(both in Polish)</string>
    <string name="versionInfoTitle">Version info</string>
    <string name="versionInfo">Version:\t\t%1$s\nDate:\t\t\t\t%2$s\nGit:\t\t\t\t\t%3$s</string>
    <string name="historyTitle">Change history</string>
    <string name="history">1.0 – first version, based on Awaryjny GPX\n1.1 – added Locus integration\n1.2 – added integration with oc.pl\n1.3 – new search filters</string>
    <string name="infoDeveloperInfoTitle">Developer info</string>
    <string name="infoDeveloperInfoDesc">Generates a state dump file, which can be very useful for the developers when they try to diagnose and fix application bugs. The file is saved in internal storage, and later can be sent by e-mail. Please include a brief description of the problem in the e-mail.\n\nIf you don\'t have e-mail client configured, you can send the file to awaryjniejszy-gpx@10g.pl by other means.\n\nThe dump consists of the following information:\n * device info (without your phone number, contacts data, sms and other sensitive information)\n * application config and state files\n * system logs</string>
    <string name="infoDeveloperInfoFile">File %s has been saved in internal storage.</string>
    <string name="infoDeveloperEmailText">Developer dump has been generated, the e-mail you are sending should contain attachment, with an approximate size of %2$s. The attachment data is also stored in internal memory, in file %1$s.\n\nPlease enter a brief description of the problem.</string>
    <string name="infoDeveloperDialogTitle">Emergency GPX - error occurred :(</string>
    <string name="infoDeveloperDialogText">It looks like Emergency GPX has crashed. Detailed debug report was generated, and saved in internal memory (%s).\nWould you like to send this report to the developer, as an e-mail attachment to awaryjniejszy-gpx@10g.pl?\n\nError reports helps to improve the app.</string>
    <string name="infoDeveloperInfoGo">Generate</string>
    <string name="infoDeveloperInfoSend">Send</string>
    <string name="infoDeveloperInfoPostpone">Later</string>
    <string name="infoDeveloperInfoError">Unknown error occurred</string>
    <string name="cacheTypeAll">All</string>
    <string name="cacheTypeEvent">Event</string>
    <string name="cacheTypeMoving">Moving cache</string>
    <string name="cacheTypeMulti">Multicache</string>
    <string name="cacheTypeOwn">Own cache</string>
    <string name="cacheTypeQuiz">Quiz</string>
    <string name="cacheTypeTraditional">Traditional</string>
    <string name="cacheTypeUnknown">Other type</string>
    <string name="cacheTypeVirtual">Virtual</string>
    <string name="cacheTypeWebcam">Webcam</string>
    <string name="difficultyTask">Task difficulty</string>
    <string name="difficultyTerrain">Terrain difficulty</string>
    <string name="difficulties">Difficulty:</string>
    <string name="chooseDifficulties">Choose a difficulty</string>
    <string name="difficultiesAll">Any</string>
    <string name="difficultiesTaskItem">task: %d</string>
    <string name="difficultiesTerrainItem">terrain: %d</string>
    <string name="difficultiesTaskRange">task: %1$d-%2$d</string>
    <string name="difficultiesTerrainRange">terrain: %1$d-%2$d</string>
    <string-array name="difficultyLables">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="chooseCacheRatings">Choose a minimum rating</string>
    <string name="cacheRatings">Rating:</string>
    <string name="cacheMinimumRating">Minimum rating</string>
    <string name="cacheRatingsAll">Any</string>
    <string name="cacheRatings3">At least average</string>
    <string name="cacheRatings4">At least good</string>
    <string name="cacheRatings5">Only excellent</string>
    <string name="cacheRatingsX">or unrated</string>
    <string name="cacheIncludeUnrated">Include unrated geocaches</string>
    <plurals name="cacheRcmdsText">
        <item quantity="one">At least %d recommendation</item>
        <item quantity="other">At least %d recommendations</item>
    </plurals>
    <plurals name="cacheRcmdsTextPercent">
        <item quantity="other">At least %d%% recommendations</item>
    </plurals>
    <string name="cacheRcmds">Recommendations</string>
    <string name="cacheRcmdsMin">At least</string>
    <string name="cacheRcmdsInfoNormal">Fetch only such geocaches which have been recommended at least N times</string>
    <string name="cacheRcmdsInfoPercent">Fetch only such geocaches which were recommended by at least N% of all users who had found them</string>
    <string name="downloader_cancelling">Cancelling</string>
</resources>