<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group
        android:menuCategory="container"
        android:orderInCategory="1" >
	    <item
	        android:id="@+id/actionStart"
	        android:icon="@drawable/ic_action_start"
	        android:orderInCategory="80"
	        android:showAsAction="always|withText"
	        android:title="@string/start"/>
    </group>
    <group
        android:menuCategory="container"
        android:orderInCategory="2" 
        >
    <item
        android:id="@+id/actionGoToDownloads"
        android:icon="@drawable/ic_action_download"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menuGoToDownloadsList"/>
    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="120"
        android:showAsAction="ifRoom"
        android:title="@string/title_activity_settings"/>
    <item
        android:id="@+id/actionInfo"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="130"
        android:showAsAction="ifRoom"
        android:title="@string/titleActivityInfo"/>
</group>

</menu>