<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:shrinkColumns="1"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewGeoPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_span="2"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp"
                    android:text="GEO_POSITION_GOES_HERE"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    tools:ignore="HardcodedText" >

                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewMaxNumOfCaches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/maxNumOfCaches"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </TextView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/editMaxNumOfCaches"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="@string/hintMaxNumOfCaches"
                        android:inputType="number"
                        android:maxLength="4"
                        android:nextFocusDown="@+id/editMaxCacheDistance"
                        android:text="@string/maxNumOfCachesDefault" />

                    <TextView
                        android:id="@+id/errorMaxNumOfCaches"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/errorPlaceholderText"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewMaxCacheDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:maxWidth="80dp"
                    android:paddingRight="10dp"
                    android:text="@string/maxCacheDistance"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/editMaxCacheDistance"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintMaxCacheDistance"
                        android:inputType="numberDecimal"
                        android:ellipsize="end"
                        android:maxLength="7"
                        android:nextFocusDown="@+id/editTargetFileName" />

                    <TextView
                        android:id="@+id/errorMaxCacheDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/errorPlaceholderText"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/cacheTypes"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/editCacheTypes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:text="@string/cacheTypeAll"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/difficulties"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/editCacheDifficulties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:text="@string/difficultiesAll"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingRight="10dp"
                    android:text="@string/cacheRatings"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/editCacheRatings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingBottom="3dp"
                    android:paddingLeft="3dp"
                    android:paddingTop="3dp"
                    android:text="@string/cacheRatingsAll"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    tools:ignore="UselessParent" >

                    <TextView
                        android:id="@+id/textViewDownloadImages"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/downloadImages_wifi"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox
                        android:id="@+id/checkBoxDownloadImages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:checked="true"
                        android:focusable="true"
                        android:gravity="right|center_vertical" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    tools:ignore="UselessParent" >

                    <TextView
                        android:id="@+id/textViewDontAskAgain"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/dontAskAgain"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox
                        android:id="@+id/checkBoxDontAskAgain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:checked="false"
                        android:focusable="true"
                        android:gravity="right|center_vertical" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:orientation="vertical"
                    tools:ignore="UselessParent" >

                    <TextView
                        android:id="@+id/errorOthers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/errorPlaceholderText"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </TableRow>
            
        </TableLayout>
    

</ScrollView>